manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shared-ing
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: log-output-svc
              port:
                number: 2345

        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: pong-server-svc
              port:
                number: 4567
